--- a/unbound/unbound.conf
+++ b/unbound/unbound.conf
@@ -6,16 +6,12 @@ server:
     log-queries: yes
     logfile: /var/log/unbound.log
     port: 53
-    interface: 167.224.167.224
+    interface: {IP}
     interface: 127.0.0.1
-    access-control: 0.0.0.0/0 allow
+    access-control: 0.0.0.0/0 allow #DONT DO THIS
     forward-zone:
         name: "."
         forward-addr: 8.8.8.8
         forward-first: yes
-    forward-zone:
-	name: "iptv.microsoft.com"
-        forward-addr: 170.10.176.5
-	forward-first: yes
 remote-control:
     control-enable: yes
